more work on Dockerfile